--- a/package.json
+++ b/package.json
@@ -1,44 +1,59 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "civicconnect-mobile",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "react-native start",
+    "test": "jest",
+    "build:android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
-    "framer-motion": "^12.23.16",
-    "leaflet": "^1.9.4",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet.markercluster": "^1.5.3",
-    "lucide-react": "^0.344.0",
-    "maplibre-gl": "^3.6.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.0.24",
-    "react-router-dom": "^7.9.1",
-    "react-webcam": "^7.2.0"
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-camera-roll/camera-roll": "^7.4.0",
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "react": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-audio-recorder-player": "^3.6.6",
+    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "^1.8.0",
+    "react-native-permissions": "^4.1.1",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/leaflet": "^1.9.20",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "^2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
